# AgentOS

./: .clang-format  .clangd  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMUNITY.md  COMPLIANCE_REPORT.md  CONTRIBUTING.md  Doxyfile  FINAL_STRUCTURE.txt  FINAL_VERIFICATION.md  IMPORT_UPDATE_REPORT.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-GPL-3.0  Makefile  NOTICE  README.en.md  README.md  README_CN.md  README_EN.md  README_zh.md  REPOSITORY_INFO.md  SECURITY.md  SUPPORT.md  VERIFICATION_REPORT.md  build.ps1  build.sh  encoding_final_report.md  encoding_project_report.md  fix_encoding.py  pyproject.toml  quickstart.sh  (+7 more)
agentos/gateway/: .clang-tidy  CMakeLists.txt  README.md  SECURITY.md
agentos/protocols/: CMakeLists.txt  README.md
atoms/: .clang-format  .clang-tidy  BUILD.md  CMakeLists.txt  README.md
atoms/benchmarks/: atoms_benchmarks.c  atoms_benchmarks.h
atoms/checkpoint/: atoms_checkpoint.c  atoms_checkpoint.h
atoms/cmake/: SecurityConfig.cmake  TestConfig.cmake
atoms/core/: CMakeLists.txt  README.md
atoms/corekern/: CMakeLists.txt  README.md
atoms/corekernlite/: CMakeLists.txt  README.md
atoms/coreloopthree/: CMakeLists.txt  CODE_REVIEW_REPORT.md  FIX_README.md  FIX_SUMMARY_REPORT.md  README.md  fix_strategy_h.ps1  run_tests.bat
atoms/memoryrovol/: CMakeLists.txt  README.md
atoms/scripts/: build.bat  build.sh  deploy.sh
atoms/syscall/: CMakeLists.txt  README.md
atoms/utils/: CMakeLists.txt
atomslite/: CMakeLists.txt  README.md
atomslite/corekernlite/: CMakeLists.txt  README.md
atomslite/coreloopthreelite/: CMakeLists.txt
atomslite/memoryrovollite/: CMakeLists.txt
atomslite/tests/: CMakeLists.txt  performance_test.c  test_atomslite_integration.c
atomsmini/tests/: CMakeLists.txt  test_atomsmini_integration.c
backs/: CMakeLists.txt  Dockerfile.ci  README.md  cppcheck.xml  performance_test.c  改造文档.md
backs/common/: CMakeLists.txt  README.md
backs/llm_d/: CMakeLists.txt  README.md
backs/market_d/: CMakeLists.txt  README.md
backs/monit_d/: CMakeLists.txt  README.md
backs/sched_d/: CMakeLists.txt  README.md
backs/scripts/: ci.sh  local-ci.sh  static-analysis.sh  verify-coverage.sh
backs/tool_d/: CMakeLists.txt  README.md
common/: CMakeLists.txt  README.md
common/platform/: platform.c
common/tests/: CMakeLists.txt
commons/: CMakeLists.txt  README.md  test_unified_modules.c
commons/platform/: platform.c
commons/tests/: CMakeLists.txt
cupolas/: CMakeLists.txt  README.md  config.h.in
cupolas/config/: README.md
cupolas/docs/: DOXYGEN_GUIDE.md
cupolas/include/: cupolas.h
cupolas/scripts/: collect_logs.sh  version.sh
cupolas/src/: circuit_breaker.c  cupolas.c  cupolas_config.c  cupolas_config.h  cupolas_metrics.c  cupolas_metrics.h  cupolas_monitoring.c  cupolas_monitoring.h  domes_config.c  domes_monitoring.c  domes_monitoring.h  mainpage.dox
domes/: CMakeLists.txt  README.md  config.h.in
domes/config/: README.md
domes/docs/: AUDIT_REPORT.md  CICD.md
domes/include/: domes.h
domes/scripts/: collect_logs.sh  version.sh
domes/src/: core.c  core.h  domes_config.c  domes_config.h  domes_metrics.c  domes_metrics.h  domes_monitoring.c  domes_monitoring.h
dynamic/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
dynamic/config/: cppcheck.cfg  trivy.yaml
dynamic/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
dynamic/docs/: CI_CD.md
dynamic/include/: dynamic.h
dynamic/src/: agentos.c  agentos.h  auth.c  auth.h  config.c  config.h  config_runtime.c  connection_pool.c  connection_pool.h  health.c  health.h  logger.h  main.c  platform.c  platform.h  ratelimit.c  ratelimit.h  server.c  server.h  session.c  session.h  session_stats.c  telemetry.c  telemetry.h
dynamic/tests/: test_dynamic.c
gateway/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
gateway/config/: cppcheck.cfg  trivy.yaml
gateway/docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
gateway/docs/: CI_CD.md
gateway/include/: gateway.h
gateway/src/: agentos.c  agentos.h  auth.c  auth.h  config.c  config.h  config_runtime.c  connection_pool.c  connection_pool.h  health.c  health.h  logger.h  main.c  platform.c  platform.h  ratelimit.c  ratelimit.h  server.c  server.h  session.c  session.h  session_stats.c  telemetry.c  telemetry.h
gateway/tests/: test_gateway.c
habitat/: CMakeLists.txt  README.md
habitat/include/: habitat.h
habitat/src/: health.c  health.h  main.c  server.c  server.h  session.h  telemetry.c  telemetry.h
heapstore/: .clang-format  .clang-tidy  .semgrep.yml  CMakeLists.txt  README.md
heapstore/config/: .semgrep.yaml
heapstore/include/: heapstore.h  heapstore_integration.h  heapstore_ipc.h  heapstore_log.h  heapstore_memory.h  heapstore_registry.h  heapstore_trace.h  utils.h
heapstore/reports/: lizard-report.html
heapstore/scripts/: build.bat  build.sh  deploy.sh
heapstore/src/: heapstore_batch.c  heapstore_core.c  heapstore_integration.c  heapstore_ipc.c  heapstore_log.c  heapstore_memory.c  heapstore_registry.c  heapstore_trace.c  private.h  utils.c
heapstore/tests/: test_heapstore_log.c  test_heapstore_memory.c  test_heapstore_trace.c
lodges/: .clang-format  .clang-tidy  .semgrep.yml  CMakeLists.txt  README.md
lodges/config/: .semgrep.yaml
lodges/include/: lodges.h  lodges_ipc.h  lodges_log.h  lodges_memory.h  lodges_registry.h  lodges_trace.h
lodges/scripts/: build.bat  build.sh  deploy.sh
lodges/src/: lodges_core.c  lodges_ipc.c  lodges_log.c  lodges_memory.c  lodges_registry.c  lodges_trace.c  private.h
lodges/tests/: CMakeLists.txt  benchmark_lodges.c  test_lodges_core.c  test_lodges_integration.c  test_lodges_ipc.c  test_lodges_log.c  test_lodges_memory.c  test_lodges_registry.c  test_lodges_trace.c
partdata/: .clang-format  .clang-tidy  .semgrep.yml  CMakeLists.txt  README.md
partdata/config/: .semgrep.yaml
partdata/docs/: CI_CD.md
partdata/include/: partdata.h  (+5 more)
(+3411 files in other folders)
