[tool.poetry]
name = "agentos-cta"
version = "3.0.0"
description = "AgentOS CoreLoopThree - An operating system for multi-agent collaboration"
authors = ["SPHARX <info@spharx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/yourname/agentos"
repository = "https://github.com/yourname/agentos"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9"
aiofiles = "^23.2"
jsonschema = "^4.20"
tiktoken = "^0.5"
pyyaml = "^6.0"
chromadb = "^0.4"
numpy = "^1.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"